# cuesheet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_test.py
src/cuesheet/: __init__.py  api.py  cassette.py  cli.py  matchers.py  modes.py  pricing.py  pytest_plugin.py  scrubbers.py  session.py  transport.py
src/cuesheet/web/: __init__.py  app.py  watcher.py
src/cuesheet/web/static/: app.css
src/cuesheet/web/templates/: _cassette_body.html  _index_table.html  base.html  cassette.html  index.html
src/encore/: __init__.py  api.py  cassette.py  cli.py  matchers.py  pytest_plugin.py  scrubbers.py  session.py  transport.py
src/encore/web/: __init__.py  app.py  watcher.py
src/encore/web/static/: app.css
src/encore/web/templates/: _cassette_body.html  _index_table.html  base.html  cassette.html  index.html
tests/: conftest.py  test_cassette.py  test_cli.py  test_cli_extras.py  test_diagnostics.py  test_matchers.py  test_modes.py  test_pricing.py  test_scrubbers.py  test_sse_filter.py  test_transport.py  test_watcher.py  test_web.py
tests/cassettes/: test_chat.yaml  test_summarizer.yaml
