[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encore"
dynamic = ["version"]
description = "Replay LLM API calls in tests. Zero cost. Zero flakes. Like vcr.py but for LLM SDKs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Giorgos Moustakas", email = "me@georgemou.gr" }]
keywords = [
  "ai", "llm", "testing", "test-fixtures", "vcr", "mock", "anthropic",
  "openai", "pytest", "snapshot-testing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Mocking",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "ruamel.yaml>=0.18,<1",
  "click>=8.1,<9",
  "rich>=13.7,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.11",
  "anthropic>=0.40",
  "openai>=1.50",
]

[project.urls]
Homepage      = "https://github.com/gmoustakas/encore"
Documentation = "https://github.com/gmoustakas/encore#readme"
Issues        = "https://github.com/gmoustakas/encore/issues"
Changelog     = "https://github.com/gmoustakas/encore/blob/main/CHANGELOG.md"

[project.scripts]
encore = "encore.cli:main"

[project.entry-points."pytest11"]
encore = "encore.pytest_plugin"

[tool.hatch.version]
path = "src/encore/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/encore"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TID", "RUF"]
ignore = ["E501", "N818"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_subclassing_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["encore.cli", "encore.pytest_plugin", "encore.transport",
          "encore.matchers", "encore.api"]
strict = false
disable_error_code = [
  "arg-type", "return-value", "misc", "dict-item",
  "no-any-return", "no-untyped-def", "type-arg", "union-attr",
  "operator", "type-var", "no-untyped-call", "unused-ignore",
  "unreachable",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
