[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuesheet"
dynamic = ["version"]
description = "Replay LLM API calls in tests. Zero cost. Zero flakes. Like vcr.py but for LLM SDKs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Giorgos Moustakas", email = "me@georgemou.gr" }]
keywords = [
  "ai", "llm", "testing", "test-fixtures", "vcr", "mock", "anthropic",
  "openai", "pytest", "snapshot-testing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Mocking",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "ruamel.yaml>=0.18,<1",
  "click>=8.2,<9",
  "rich>=14.0,<16",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.120,<1",
  "uvicorn[standard]>=0.35,<1",
  "jinja2>=3.1,<4",
  "watchfiles>=1.0,<2",
  "sse-starlette>=2.2,<4",
]
all = [
  "fastapi>=0.120,<1",
  "uvicorn[standard]>=0.35,<1",
  "jinja2>=3.1,<4",
  "watchfiles>=1.0,<2",
  "sse-starlette>=2.2,<4",
]
dev = [
  "fastapi>=0.120,<1",
  "uvicorn[standard]>=0.35,<1",
  "jinja2>=3.1,<4",
  "watchfiles>=1.0,<2",
  "sse-starlette>=2.2,<4",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.22",
  "ruff>=0.8",
  "mypy>=1.13",
  "anthropic>=0.45",
  "openai>=1.60",
  "build>=1.2",
  "twine>=6.0",
]

[project.urls]
Homepage      = "https://github.com/gmoustakas/cuesheet"
Documentation = "https://github.com/gmoustakas/cuesheet#readme"
Issues        = "https://github.com/gmoustakas/cuesheet/issues"
Changelog     = "https://github.com/gmoustakas/cuesheet/blob/main/CHANGELOG.md"

[project.scripts]
cuesheet = "cuesheet.cli:main"

[project.entry-points."pytest11"]
cuesheet = "cuesheet.pytest_plugin"

[tool.hatch.version]
path = "src/cuesheet/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cuesheet"]

[tool.hatch.build.targets.sdist]
include = [
  "src/cuesheet",
  "tests",
  "examples",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TID", "RUF"]
ignore = ["E501", "N818"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_subclassing_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cuesheet.cli", "cuesheet.pytest_plugin", "cuesheet.transport",
          "cuesheet.matchers", "cuesheet.api", "cuesheet.web.*"]
strict = false
disable_error_code = [
  "arg-type", "return-value", "misc", "dict-item",
  "no-any-return", "no-untyped-def", "type-arg", "union-attr",
  "operator", "type-var", "no-untyped-call", "unused-ignore",
  "unreachable",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
